# netsecauto

./: README.md  app.py  app_init.py  devices.json  fix_password_hashing.py  main.py  models.py  netsec_cli.py  project-requirements.txt  pyproject.toml  rebuild_database.py  reset_and_fix_errors.sh  routes.py  run_production.sh  start_demo.sh  test_audit_template.py  wsgi.py
attached_assets/: Pasted-TypeError-TypeError-Response-set-cookie-got-an-unexpected-keyword-argument-partitioned-Traceba-1747314167457.txt  Pasted-UndefinedError-jinja2-exceptions-UndefinedError-dict-object-has-no-attribute-password-policy-T-1747383471497.txt  Pasted-ValueError-ValueError-unsupported-hash-type-scrypt-32768-8-1-Traceback-most-recent-call-last-Fil-1747314570321.txt  Pasted-alueError-ValueError-unsupported-hash-type-scrypt-32768-8-1-Traceback-most-recent-call-last-File-1747383168770.txt
instance/: netsec.db
static/css/: custom.css  topology.css
static/js/: config_diff.js  device_commands.js  main.js  topology.js
templates/: compare_configs.html  config_wizard.html  device_detail.html  device_monitoring.html  devices.html  index.html  layout.html  login.html  security_check.html  topology.html
utils/: __init__.py  config_parser.py  config_wizard.py  device_connector.py  ping_monitor.py  security_checks.py  session_compat.py  telnetlib_compat.py  test_data_generator.py
utils/data/: config_templates.json
